<resources>
    <string name="app_name">LKKI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frutaTxt">Fruta</string>
    <string name="colorTxt">black</string>
    <string name="telefonoTxt">No Telepon</string>
    <string name="telefonoHint">Masukan no telp anda</string>
    <string name="emailTxt">Email</string>
    <string name="emailHint">Masukan alamat email</string>
    <string name="guardarBtn">Email</string>
    <string name="frutasHint">Masukan input</string>
    <string name="nama">Penerima Surat</string>
    <string name="no_hp">No HP</string>
    <string name="no_kantor">No Kantor</string>
    <string name="email">Alamat Email</string>
    <string name="jalan">Alamat</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="keterangan">Catatan Pengingat</string>
    <string name="lokasi_lat">Latitude</string>
    <string name="lokasi_long">Longitude</string>
    <string name="save">Simpan</string>
    <string name="title_activity_input_data">InputDataActivity</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="data_pendata">Hasil Pendataan</string>
    <string name="koordinator">Koordinator</string>
    <string name="manager_area">Manager Area</string>
    <string name="tools">Tools</string>
    <string name="konsultan">Konsultan</string>
    <string name="pendataan">Pendataan</string>
    <string name="presentasi">Jadwal Presentasi</string>
    <string name="kurir">Kurir</string>
    <string name="tempat">Tempat</string>
    <string name="loading">Memuat Data</string>
    <string name="hint_phone_number">Masukan No HP Anda</string>
    <string name="hint_verification_code">Masukan Kode Verifikasi</string>
    <string name="start_phone_auth">Login Menggunakan No HP</string>
    <string name="verify_phone_auth">Verifikasi</string>
    <string name="resend_phone_auth">Kirim Ulang Kode Verifikasi</string>
    <string name="sign_out">Keluar</string>
    <string name="signed_out">Sign Out</string>
    <string name="phone_title_text">Masukan No HP Anda</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="signed_in">Signed In</string>
    <string name="sign_up">Daftar</string>
    <string name="text_daftar">Isi formulir ini untuk mendaftar menjadi Pendata, Konsultan, Kurir dan Koordinator Wilayah, kami akan segera mengirimkan konfirmasi via SMS, Email ataupun telepon. CV dan Lamaran bisa dikirim ke manajemen@lembagakonsultankankerindonesia.or.id</string>
    <string name="action_download">Download File</string>
    <string name="realm_data">Load Data from Server</string>
    <string name="file_referensi">Apakah anda mau memperbaharui data referensi ?</string>
    <string name="pesan_aktifkan_gps">Anda belum mengaktifkan GPS, silahkan aktifkan GPS terlebih dahulu!</string>
    <string name="file_json_provinsi">provinsi.json</string>
    <string name="file_json_kabupaten">kabupaten.json</string>
    <string name="file_json_kecamatan">kecamatan.json</string>
    <string name="file_json_desa">desa.json</string>
    <string name="alamat">Alamat</string>
    <string name="penerima_proposal">Penerima Surat</string>
    <string name="durasi">Durasi (menit)</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="jabatan">Jabatan</string>
    <string name="add">Tambah</string>
    <string name="start_delete">Hapus</string>
    <string name="add_random">Tambah Acak</string>
    <string name="delete">Hapus</string>
    <string name="search_title">Cari...</string>
    <string name="search_hint">Cari</string>
    <string name="cancel_delete">Cancel Delete</string>
    <string name="group_delete">Group Delete</string>


    <!-- login preference -->
    <string name="userlogged">false</string>
    <string name="uid">0</string>
    <string name="tipe_user">0</string>
    <string name="foto_profil">false</string>
    <string name="u_name">Username</string>
    <string name="u_nama">Nama Lengkap</string>
    <string name="u_nik">NIK Pendata</string>
    <string name="u_tipe">0</string>
    <string name="u_wilayah">0</string>
    <string name="kode_prov">0</string>
    <string name="kode_kab">0</string>

    <string name="com.mapbox.mapboxsdk.accessToken" translatable="false">pk.eyJ1IjoiY2o1azM4ZjdlMDF4bzMzczVjc2F2cHZ2aSIsImEiOiJjajVrMzhmYWQwMXhxMzNzNTZoZnNva2ZmIn0.IKKINmA4YdhpTYf0b0C6UQ</string>
    <string name="file_json_konsultan">konsultan.json</string>
    <string name="title_itemdata_list">ItemsPendataan</string>
    <string name="title_itemdata_detail">ItemData Detail</string>
    <string name="pesan_arahgoogle">Anda akan diarahkan ke lokasi tujuan berdasarkan petunjuk google map, jangan lupa aktifkan GPS anda untuk mengetahui lokasi saat ini dan pastikan koneksi internet anda tetap terhubung.</string>
    <string name="file_json_kurir">kurir.json</string>

</resources>
